--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 OPENAI_API_KEY = "sk-xxxxxx,sk-xxxxxx,sk-xxxxxx"
 GPT_MODEL = "gpt-3.5-turbo"
 GPT_TEMPERATURE= "0"
-OPENAI_API_ENGINE_AZURE = ""
+OPENAI_API_MODEL_AZURE = ""
 OPENAI_API_KEY_AZURE = ""
-OPENAI_API_BASE_AZURE = ""
-OPENAI_API_TYPE_AZURE = ""
-OPENAI_API_VERSION_AZURE = ''
+OPENAI_API_VERSION_AZURE = ""
+OPENAI_API_ENDPOINT_AZURE = ""
