--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 		"vscode": {
 			"extensions": [
 				"GitHub.copilot",
-				"omthemes.omthemes"
+				"omthemes.omthemes",
+				"DavidAnson.vscode-markdownlint"
 			]
 		}
 	}
